--- a/react/week2/react2-hw-todo-app/react2-hw-todo-app/src/index.css
+++ b/react/week2/react2-hw-todo-app/react2-hw-todo-app/src/index.css
@@ -1,10 +1,4 @@
 body {
-  background-color: rgb(248, 249, 250);
-  border: dotted 5px rgb(117, 196, 245);
-  border-radius: 30px;
-}
-
-body {
   margin: auto;
   margin-top: 3%;
   margin-bottom: 3%;
@@ -18,10 +12,6 @@ body {
   background-color: rgb(248, 249, 250);
   border: dotted 2px orange;
   border-radius: 20px;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
 h1, h2, h3, h4, p {
@@ -56,53 +46,37 @@ p {
   text-align: center;
 }
 
-header, footer, .counter, .timer, ul {
+header, footer, .counter, .timer, ul, .add_item_btn_div {
   margin: 2% 0% 5% 0%;
   padding: 3% 2% 5% 2%;
   -background-image: url(https://github.com/mag-da-lenka/HYF-heptapods/blob/master/IMGP0011fiafiolki.jpg?raw=true);
   background-color: white;
-  border: dotted 2px lightskyblue;
+  border: solid 1px rgba(135, 206, 250, 0.404);
   border-radius: 15px;
-  box-shadow: 11px 2px 15px lightskyblue;
-}
-
-.footer-center {
-  text-align: left;
-  padding-left: 3%;
-}
-
-.counter {
-  /* I know .counter is repeated. Is it bad practice? */
-  padding: 5% 2% 5% 2%;
+  /* box-shadow: 11px 2px 15px rgba(135, 206, 250, 0.288); */
+  box-shadow: 11px 2px 15px rgba(121, 121, 121, 0.288);
 }
 
 .timer-digits {
   font-weight: bold;
   color: orange;
-  border: 2px dotted lightskyblue;
+  border-left: 2px solid rgba(135, 206, 250, 0.404);
+  border-right: 2px solid rgba(135, 206, 250, 0.404);
   padding: 0% 1.5% 0.25% 1.5%;
   margin: 1% 1.5% 0.25% 1.5%;
   border-radius: 10px;
 }
 
-main {
-  /*top-right-bottom-left*/
-  margin: 2% 0% 5% 0%;
-  padding: 1% 2% 1% 2%;
-  color: black;
-  text-align: left;
-  background-color: white;
-  border: solid 3px rgb(106, 195, 250);
-  border-radius: 15px;
-  -box-shadow: 10px 10px 8px #888888;
-  box-shadow: 11px 2px 15px lightskyblue;
+.add_item_btn_div {
+  margin: 0% 0% 0.9% 0%;
+  padding: 1% 1% 1% 1%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 ul {
-  -list-style-type: none;
-  border: solid 2px lightskyblue;
-  border-radius: 10px;
-  /*top-right-bottom-left*/
+  list-style-type: none;
   margin: 0% 0% 0% 0%;
   padding: 0% 0% 0% 0%;
 }
@@ -110,17 +84,27 @@ ul {
 li {
   display: flex;
   list-style-type: none;
-  border: dotted 1px lightskyblue;
-  border-radius: 7px;
+  border: solid 1px rgba(135, 206, 250, 0.404);
+  border-radius: 11px;
   /*top-right-bottom-left*/
-  margin: 0% 0% 0% 0%;
+  margin: 1% 0.7% 1% 0.7%;
   padding: 1% 1% 1% 3%;
 }
 
 .list-width {
-  width: 500px;
+  width: 90%;
   display: flex;
   flex-direction: row;
+}
+
+.footer-center {
+  text-align: left;
+  padding-left: 3%;
+}
+
+button:hover {
+  color: orange;
+  background-color: white;
 }
 
 button, .del_item_btn {
@@ -136,18 +120,22 @@ button, .del_item_btn {
   text-align: center;
   background-color: orange;
   cursor: pointer;
-  border: 1.0px solid lightskyblue;
+  border: 1.0px solid rgba(135, 206, 250, 0.404);
   border-radius: 25px;
   box-shadow: 10px 10px 8px #888888;
-  box-shadow: 2px 2px 5px lightskyblue;
+  box-shadow: 2px 2px 5px rgba(135, 206, 250, 0.404);
 }
 
 .add_item_btn {
-  width: 70px;
+  width: 65px;
   height: 40px;
   margin: 1% 1% 1% 1%;
   padding: 0% 0% 0.0% 0%;
   font-size: 30px;
+}
+
+.del_item_btn:hover {
+  color: rgb(55, 154, 216);
 }
 
 .del_item_btn {
@@ -157,22 +145,6 @@ button, .del_item_btn {
   padding: 0% 0% 0.0% 0%;
   font-size: 1.0em;
   color: orange;
-  background-color: white;
-}
-
-.add_item_btn_div {
-  margin: 0% 0% 0.1% 0%;
-  padding: 1% 1% 1% 3%;
-  padding-right: 1%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  -border: solid 2px lightskyblue;
-  border-radius: 10px;
-  -list-style-type: none;
-  border: solid 2px lightskyblue;
-  border-radius: 10px;
-  box-shadow: 11px 2px 15px lightskyblue;
   background-color: white;
 }
 
@@ -188,6 +160,11 @@ button, .del_item_btn {
   justify-content: center;
 }
 
+.column {
+  display: flex;
+  flex-direction: column;
+}
+
 .three-columns {
   display: flex;
   flex-direction: row;
@@ -198,59 +175,41 @@ button, .del_item_btn {
 }
 
 .three-columns>p {
-  width: 150px;
+  width: 29%;
   border: 2px dotted orange;
-  border-radius: 25px;
-  /* margin: 1% 1% 1% 1%; */
-  /*top-right-bottom-left*/
+  border-radius: 17px;
   padding: 1% 1% 1% 1%;
-  /*top-right-bottom-left*/
 }
 
 .checkmark {
-  height: 40px;
+  height: 45px;
   width: 25px;
+  margin: 0px 30px 0px 0px;
 }
 
-/* .toggle-button {
-  width: 100%;
-  height: 50px;
-  font-size: 1.3em;
-  border-radius: 15px;
-  border: 3.0px dotted lightskyblue;
-  background-color: orange;
-  box-shadow: 11px 2px 15px rgba(255, 166, 0, 0.835);
-  box-shadow: 2px 2px 5px lightskyblue;
-  box-shadow: 11px 2px 15px lightskyblue;
-} */
-
 a:link {
-  margin: 0.25% 2% 1.25% 0%;
-  padding: 0.25% 0.25% 0.25% 0%;
+  margin: 0% 1% 0% 1%;
+  padding: 0% 0.75% 0.25% 0.75%;
   color: orange;
   text-decoration: none;
-  -border: solid 2px aquamarine;
   border-radius: 5px;
   font-weight: bold;
-  font-size: 1.0em;
-  font-stretch: extra-expanded;
 }
 
 a:visited {
-  color: orange;
+  color: rgb(55, 154, 216);
 }
 
 a:hover, a:active, a:focus {
   color: rgb(255, 255, 255);
   background-color: orange;
-  opacity: 0.7;
+  opacity: 0.9;
 }
 
 @media only screen and (max-width: 600px) {
   body {
     background-color: ghostwhite;
-  }
-  .nav-links {
+    width: 540px;
     display: flex;
     flex-direction: column;
   }
